--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solana-test-validator-js",
-  "version": "0.1.19",
+  "version": "0.2.0",
   "description": "Spin-up solana-test-validator instance in JavaScript",
   "main": "dist/index.js",
   "scripts": {
@@ -24,5 +24,8 @@
     "@types/node-fetch": "^2.6.1",
     "mocha": "^10.0.0",
     "typescript": "^4.7.3"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
