--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/mocha": "^9.1.1",
     "@types/node-fetch": "^2.6.1",
     "mocha": "^10.0.0",
+    "typedoc": "^0.22.17",
     "typescript": "^4.7.3"
   },
   "files": [
